syntax = "proto3";
package product_v1;

import "product/v1/productMessage.proto";

service ProductService {
  rpc FindProductsWithPagination(product_v1.FindProductsWithPaginationRequest) returns (product_v1.FindProductsWithPaginationResponse);
  rpc FindProductById(product_v1.FindProductByIdRequest) returns (product_v1.Product);
  rpc CreateProduct(product_v1.CreateProductRequest) returns (product_v1.CreateProductResponse);
  rpc UpdateProductById(product_v1.UpdateProductByIdRequest) returns (product_v1.Product);
  rpc DeleteProductById(product_v1.DeleteProductByIdRequest) returns (product_v1.DeleteProductByIdResponse);
}
